Styling and spacing fixes

--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -11,42 +11,45 @@ article {
 	margin: 20px;
 	border: 1px solid #FF5A5F;
 	border-radius: 4px;
-	display: flex;
-	justify-content: center;
+	display: inline-block;
 	min-height: 250px;
 	vertical-align: top;
 }
 article h2 {
 	font size: 30px;
 	text-align: center;
+	display: inline-block;
+	justify-content: center;
 }
-div.price_by_night {
-	font color: #FF5A5F;
+.price_by_night {
+	font-color: #FF5A5F;
 	border: 4px solid #FF5A5F;
 	border-radius: 100%;
 	min-width: 60px;
 	height: 60px;
-	font size: 30px;
-	position: relative;
-	top: 20px;
-	right: 20px;
+	font-size: 30px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	float: right;
 }
-div.information {
+.information {
 	height: 80px;
 	border-top: 1px solid #DDDDDD;
 	border-bottom: 1px solid #DDDDDD;
 	display: flex;
-	flex-direction: row;
-	align-items: center;
 	justify-content: space-around;
-	text-align: center;
+	align-items: center;
 }
-div.max_guest,
-div.number_rooms,
-div.number_bathrooms {
+.max_guest,
+.number_rooms,
+.number_bathrooms {
 	width: 100px;
 	height: 100%;
+	line-height: 140px;
 	display: inline-block;
+	background-position: 50% 5px;
+  	background-repeat: no-repeat;
 }
 .max_guest {
   background-image: url("../images/icon_group.png");
@@ -57,9 +60,12 @@ div.number_bathrooms {
 .number_bathrooms {
   background-image: url("../images/icon_bath.png");
 }
-div.desription,
-div.user {
+.desription,
+.user {
         text-align: left;
-        margin-top: 10px;
+	margin-top: 10px;
         margin-bottom: 10px;
+}
+footer {
+  position: relative;
 }
